# ESPGrind

./: CMakeLists.txt  Notes.md  README.md  git_firmware_version.py  platformio.ini  sdkconfig.esp32-2432S024C  sdkconfig.esp32s3box  sdkconfig.esp32s3box.old
boards/: esp32-2432S024C.json
gui/: ESPGrind.sll  ESPGrind.spj  ESPGrind_events.py  Themes.slt
gui/assets/: ui_font_MartianExtraBold38.c  ui_font_MartianExtraBold38.fcfg
hardware/fausto/: bezel-CYD2432S024C.dxf  bezel-waveshare-2.8.dxf  bezel-waveshare-2.8.scad  replacement-cover.scad
src/: CMakeLists.txt  common.h  debug.h  idf_component.yml  main.c  mill.c  mill.h  settings.c  settings.h
src/bsp/: CMakeLists.txt  PCF85063.c  PCF85063.h  ST7789T.c  cyd-esp32-2432S024C.bsp.c  cyd-esp32-2432S024C.bsp.h  touch-CST328.c  touch-CST328.h  waveshare-esp32s3-touch2.8.bsp.c  waveshare-esp32s3-touch2.8.bsp.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_screensaver.c  ui_screensaver.h  ui_themes.c  ui_themes.h
src/ui/components/: ui_comp_hook.c
src/ui/screens/: ui_Main.c  ui_ScreenSaver.c  ui_SettingsMain.c
